--- a/admin/movimentacao/movimentacao.html
+++ b/admin/movimentacao/movimentacao.html
@@ -100,7 +100,7 @@
             <img src="https://bixobvseaocmhljckskl.supabase.co/storage/v1/object/public/assets_publicos/logo-redonda-prefeitura.png" alt="Logo da Prefeitura de Igarassu">
         </div>
         <div class="panel-header">
-            <h1>Painel de Movimentação de Mercadorias</h1>
+            <h1>Movimentação de Mercadorias</h1>
             <p>Sistema para controle de entrada e saída de produtos</p>
         </div>
         <div class="card">
