Exclusão das Pastas

--- a/menu.html
+++ b/menu.html
@@ -135,12 +135,12 @@
             <section class="menu-section">
                 <h2>Operacional</h2>
                 <div class="menu-grid">
-                    <a href="/admin/dashboard-estoque/dashboard.html" class="menu-card">
+                    <a href="/dashboard-estoque/dashboard.html" class="menu-card">
                         <i class="material-icons card-icon">dashboard</i>
                         <h3 class="card-title">Dashboard de Estoque</h3>
                         <p class="card-description">Visualize indicadores, gráficos e o resumo geral do seu estoque.</p>
                     </a>
-                    <a href="/admin/movimentacao/movimentacao.html" class="menu-card">
+                    <a href="/movimentacao/movimentacao.html" class="menu-card">
                         <i class="material-icons card-icon">swap_horiz</i>
                         <h3 class="card-title">Lançar Movimentações</h3>
                         <p class="card-description">Registre e consulte todas as entradas e saídas de mercadorias.</p>
@@ -150,7 +150,7 @@
                         <h3 class="card-title">Fichas de Expedição</h3>
                         <p class="card-description">Solicite materiais para o seu setor de forma rápida e organizada.</p>
                     </a>    
-                    <a href="/admin/Inventario/inventario.html" class="menu-card">
+                    <a href="/Inventario/inventario.html" class="menu-card">
                         <i class="material-icons card-icon">checklist</i>
                         <h3 class="card-title">Realizar Inventário</h3>
                         <p class="card-description">Faça a contagem física e ajuste as quantidades de estoque.</p>
@@ -161,17 +161,17 @@
             <section class="menu-section">
                 <h2>Cadastros</h2>
                 <div class="menu-grid">
-                    <a href="/admin/cadastro-produto/cadastro_produto.html" class="menu-card">
+                    <a href="/cadastro_produto.html" class="menu-card">
                         <i class="material-icons card-icon">inventory_2</i>
                         <h3 class="card-title">Produtos</h3>
                         <p class="card-description">Cadastre e gerencie todos os itens do almoxarifado.</p>
                     </a>
-                    <a href="/admin/setores/setores.html" class="menu-card">
+                    <a href="/setores/setores.html" class="menu-card">
                         <i class="material-icons card-icon">corporate_fare</i>
                         <h3 class="card-title">Setores e Departamentos</h3>
                         <p class="card-description">Gerencie os centros de custo que solicitam materiais.</p>
                     </a>
-                    <a href="/admin/Fornecedores/fornecedores.html" class="menu-card">
+                    <a href="/Fornecedores/fornecedores.html" class="menu-card">
                         <i class="material-icons card-icon">local_shipping</i>
                         <h3 class="card-title">Fornecedores</h3>
                         <p class="card-description">Cadastre e consulte os dados dos seus fornecedores.</p>
@@ -182,7 +182,7 @@
             <section class="menu-section">
                 <h2>Relatórios e Análises</h2>
                 <div class="menu-grid">
-                    <a href="/admin/historico-de-pedidos/historico_pedidos.html" class="menu-card">
+                    <a href="/historico-de-pedidos/historico_pedidos.html" class="menu-card">
                         <i class="material-icons card-icon">history</i>
                         <h3 class="card-title">Histórico de Pedidos</h3>
                         <p class="card-description">Consulte e analise o status de todas as solicitações de material.</p>
